--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -1,1 +1,2 @@
-add_subdirectory(event_loop)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/event_loop)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/networking)
