Add different handlers for connecting and reading a message

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,6 @@ cmake_minimum_required(VERSION 3.13.0)
 add_executable(chat_main)
 target_include_directories(chat_main PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/)
 target_link_libraries(chat_main eloop_static networking_shared)
+target_compile_options(chat_main PRIVATE "-g")
 add_subdirectory(deps)
 add_subdirectory(src)
