Update versions of dstruct and event_loop

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "deps/networking"]
 	path = deps/networking
 	url = git@github.com:UtilityRod/networking.git
+[submodule "deps/dstruct"]
+	path = deps/dstruct
+	url = git@github.com:UtilityRod/dstruct.git
