Remove message because it used old implementaion, add join event when a user wants to join the server

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,7 @@
-target_sources(chat_main PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/chat_main.c)
+set(
+    SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/chat_main.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/client.c
+)
+
+target_sources(chat_main PUBLIC ${SOURCES}) 
